...
                          width: 2,
                        ),
                      ),
                      child: Padding(
                        padding: const EdgeInsets.symmetric(horizontal: 16),
                        child: TextField(
                          key: const Key('edit-profile-nickname'),
                          controller: controller.nicknameController,
                          maxLength: 20,
                          style: theme.textTheme.bodyLarge!.copyWith(
                            color: theme.colorScheme.onPrimary,
                            fontSize: 20,
                          ),
...
                          ),
                        ),
                      );
                    }),
                    Obx(
                      () => CheckersGradientButton(
                        key: const Key('edit-profile-save'),
                        label: TranslationKeys.saveProfile.tr,
                        onPressed:
                            controller.isSaving.value ? null : controller.save,
                      ),
                    ),
                  ],
...
